# brain-art-muse

./: .flake8  .gitignore  .pylintrc  CHANGELOG.md  README.md  README_PL.md  config.py  main.py  pyproject.toml  requirements.txt
docs/: BATTERY_SAVING.md  DEVELOPMENT.md  EEG_MONITOR.md  FESTIVAL.md  FILTERING.md  INSTALLATION.md  INSTRUCTION.md  MOTION_AXES.md  OPENMUSE_PRESETS.md  OPTIMIZATION.md  QUALITY_METRICS.md  README.md
docs/eng/: BATTERY_SAVING.md  DEVELOPMENT.md  INSTALLATION.md  USER_GUIDE.md
src/: __init__.py  brain_visualizer.py  eeg_processor.py  eeg_visualizer.py  motion_processor.py  muse_connector.py  performance_optimizer.py  signal_quality.py
tests/: __init__.py  debug_channels.py  test_eeg_visualizer.py  test_performance.py  test_system.py
tests/gestures/: test_motion.py  test_motion_axes.py  test_tilt.py
utils/: __init__.py  find_muse.py
